--- a/index.html
+++ b/index.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Social Hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="omnisocial-manager" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <title>My Social Hub – Social Media Management Platform | Wendy Amadi</title>
+  <meta name="description"
+    content="My Social Hub is a modern social media management dashboard built by Wendy Amadi. It offers cross-platform scheduling, analytics, and real-time messaging for social media managers and businesses.">
+  <meta name="keywords"
+    content="My Social Hub, Social Media Manager App, Social Platform Dashboard, Wendy Amadi Projects, Cloud DevOps Portfolio, React Tailwind App, Social Scheduler App, DevOps Deployment, Kubernetes Project">
+  <meta name="author" content="Wendy Amadi" />
+  <link rel="canonical" href="https://portfolio.wendiblac.com/projects/social-hub" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://portfolio.wendiblac.com/projects/social-hub" />
+  <meta property="og:title" content="My Social Hub – Social Media Dashboard | Wendy Amadi" />
+  <meta property="og:description"
+    content="Explore My Social Hub, a full-featured social media management platform built by Wendy Amadi. View analytics, manage messages, and publish across multiple platforms in one place." />
+  <meta property="og:image" content="https://portfolio.wendiblac.com/assets/og-image.png"  />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="My Social Hub – Social Media Dashboard | Wendy Amadi" />
+  <meta name="twitter:description"
+    content="A feature-rich, beautifully designed social media manager app by Wendy Amadi. Unified inbox, post composer, analytics – all in one place." />
+  <meta name="twitter:image" content="https://portfolio.wendiblac.com/assets/og-image.png"  />
+  <meta name="twitter:site" content="@wendiiblac" />
+
+  <!-- Structured Data (Schema.org) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "My Social Hub",
+      "operatingSystem": "Web",
+      "applicationCategory": "Social Media Management",
+      "creator": {
+        "@type": "Person",
+        "name": "Wendy Amadi"
+      },
+      "description": "A unified dashboard that helps social media managers track engagement, publish posts, and manage messages across platforms.",
+      "url": "https://portfolio.wendiblac.com/projects/social-hub",
+      "image": "https://portfolio.wendiblac.com/assets/profile.png"
+    }
+  </script>
+
+  <link rel="icon" type="image/png" href="assets/favicon.png" sizes="256x256" />
+
+  <link rel="stylesheet" href="style.css" />
+</head>
 
   <body>
     <div id="root"></div>
