Made changes to app and updated deploymeny yaml

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
   </script>
 
-  <link rel="icon" type="image/png" href="assets/favicon.png" sizes="256x256" />
+  <link rel="icon" type="image/png" href="public/favicon.ico" sizes="256x256" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
