--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>My Social Hub – Social Media Management Platform | Wendy Amadi</title>
+  <title>My Social Hub | Social Media Management Platform | Wendy Amadi</title>
   <meta name="description"
     content="My Social Hub is a modern social media management dashboard built by Wendy Amadi. It offers cross-platform scheduling, analytics, and real-time messaging for social media managers and businesses.">
   <meta name="keywords"
@@ -46,7 +46,7 @@
     }
   </script>
 
-  <link rel="icon" type="image/png" href="public/favicon.ico" sizes="256x256" />
+  <link rel="icon" type="image/png" href="/favicon.ico" sizes="256x256" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
